feat(backend): implement observability stack, dynamic LLMs, and chat persistence     - Observability Stack: Integrated Prometheus and Grafana into the docker-compose ecosystem. Added Prometheus scraping configuration and updated Spring Security to expose the   /actuator/prometheus metrics endpoint for live JVM and HTTP monitoring.     - LLM Integration: Removed deprecated Gemini models and introduced a dynamic GET /api/chat/models endpoint to expose only models with active API keys.     - Chat Persistence & Rate Limiting: Refactored ChatController and LlmGenerationService to save all AI conversations to the Postgres QueryLog and enforce a 20/day query limit.     - History Endpoint Refactor: Updated the GET /api/repos/{id}/queries endpoint to map the unified QueryLog into standard ChatMessage DTOs (split by 'user' and 'assistant'   roles).     - Docker Networking: Added extra_hosts bridge to docker-compose.yml allowing the isolated backend container to securely route traffic to the host machine's Ollama instance.     - Code Quality: Refactored architecture to remove inline imports and enforce clean orchestration.